ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /developer
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
